[Develop] find a strange issue.

--- a/inject_secondary_dex/AndroidManifest.xml
+++ b/inject_secondary_dex/AndroidManifest.xml
@@ -18,8 +18,9 @@
       package="com.example.dex"
       android:versionCode="1"
       android:versionName="1.0">
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <uses-sdk android:targetSdkVersion="17" android:minSdkVersion="1"/>
+	
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name="com.example.dex.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
